# actionabi

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  requirements-experiments.txt
.github/workflows/: ci.yml
adapters/: lerobot_to_jsonl.py
benchmarks/: score_benchmark.cpp
benchmarks/results/: rtx5090-h1024.json  rtx5090-h128.json  rtx5090-h65536.json  rtx5090-h8192.json
bindings/: cell_score.hpp  cell_score_cuda.cu  module.cpp
cmake/: ActionABIOptions.cmake
cuda/: score_cuda.cu
experiments/: bias_robust.py  corpus.yaml  hub_documentation.py  plot_results.py  real_dataset_gate.py  run_case_studies.py  run_falsification.py  run_hub_audit.py  score_doc_agreement.py  score_labeled_traces.py  sprint_accuracy.py  sprint_performance.py  test_bias_robust.py  test_corpus_and_adapter.py  test_plot_results.py  test_real_dataset_gate.py  test_release_assets.py  test_run_case_studies.py  test_run_falsification.py  test_score_doc_agreement.py
include/actionabi/: contract.hpp  converter.hpp  evidence.hpp  identifiability.hpp  probe.hpp  score.hpp  score_cuda.hpp  score_pinocchio.hpp  trajectory.hpp
media/: make_media.py  recovery_trace.json
reports/: benchmark_sprint.md  documentation_agreement.md  labeled_sim_traces.md  lerobot_hub_audit.md  scorer_fixes.md
results/: aloha.json  doc_agreement.json  droid.json  hub_audit.json  hydra.json  manifest.json  pusht.json  summary.json  ur5.json  xarm.json
results/hub/: aloha_mobile_cabinet.json  aloha_sim_insertion_human.json  aloha_sim_transfer_cube_human.json  aloha_static_battery.json  aloha_static_coffee.json  aloha_static_cups_open.json  austin_buds_dataset.json  berkeley_cable_routing.json  berkeley_fanuc_manipulation.json  berkeley_mvp.json  berkeley_rpt.json  jaco_play.json  libero.json  libero_10.json  metaworld_mt50.json  nyu_door_opening_surprising_effectiveness.json  nyu_franka_play_dataset.json  pusht-subtask.json  roboturk.json  stanford_kuka_multimodal_dataset.json  svla_so100_pickplace.json  svla_so100_sorting.json  svla_so101_pickplace.json  taco_play.json  toto.json  ucsd_kitchen_dataset.json  ucsd_pick_and_place_dataset.json  utaustin_mutex.json  xarm_push_medium.json
results/labeled_sim/: raw.jsonl  raw_postfix.jsonl  summary.json
results/labeled_sim_postfix/: summary.json
results/sprint/accuracy/: summary.json
results/sprint/performance/: summary.json
schemas/: action_spec.schema.json
src/: contract.cpp  converter.cpp  evidence.cpp  identifiability.cpp  probe.cpp  score_cpu.cpp  score_pinocchio.cpp  trajectory.cpp
src/cli/: main.cpp
tests/: test_benchmark.py  test_cell_score.cpp  test_cli.py  test_contract.cpp  test_converter.cpp  test_cuda_parity.cpp  test_evidence.cpp  test_identifiability.cpp  test_pinocchio.cpp  test_probe.cpp  test_score.cpp  test_sprint_metrics.py  test_trajectory.cpp
tests/fixtures/: absolute.json  delta.json  simple.jsonl  two_link.urdf
